# track-and-deliver-demo

./: .env  Cargo.toml  commands.txt  docker-compose.yml
migrations/: 20260613125022_create_orders_table.sql  20260613131141_create_driver_table.sql  20260613131212_create_vehicle_table.sql  20260613131228_create_shipment_table.sql  20260613131308_create_tracking_event_table.sql
src/: main.rs
src/application/use_cases/: create_order.rs
src/application/use_cases/order/: command.rs  create_order.rs  find_order_by_id.rs  mod.rs
src/domain/entities/: driver.rs  mod.rs  order.rs  shipment.rs  tracking_event.rs  vehicle.rs
src/domain/repository/: order_repository.rs
src/infrastructure/database/: postgres.rs
src/infrastructure/repository/: mod.rs  postgres_order_repository.rs
src/infrastructure/repository/postgres/: mod.rs  order_repository.rs
src/infrastructure/repository/postgres/models/: mod.rs  order_row.rs
src/interface/http/: mod.rs  route.rs  state.rs
src/interface/http/handler/: order_handler.rs
src/interface/http/request/: create_order_request.rs  mod.rs
src/interface/http/response/: order_response.rs
