[package]
name = "track_deliver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "migrate", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.2", features = ["serde", "v4"] }
